更新了文章

--- a/content/posts/2025/11.14.001.md
+++ b/content/posts/2025/11.14.001.md
@@ -22,19 +22,19 @@ draft: false
 - **VStack**：用于将视图垂直排列。
 - **ZStack**：用于将视图相互叠放，实现深度层次。
 
-默认情况下，stack 视图会将内容居中对齐，并在子视图之间加入间隔。结合 `Spacer` 和 `Divider`，可以创建高度灵活的布局。
+默认情况下,stack 视图会将内容居中对齐,并在子视图之间加入间隔。结合 `Spacer` 和 `Divider`,可以创建高度灵活的布局。
 
-![Stack 视图示意图](http://developer.apple.com/cn/documentation/swiftui/building-layouts-with-stack-views/Building%20Layouts%20with%20Stack%20Views%20_%20Apple%20Developer%20Documentation_files/Building-Layouts-with-Stack-Views-1@2x.png)
+![Stack 视图示意图](https://docs-assets.developer.apple.com/published/ce0ca452c3bcccf11149a8728f1c489f/6075/Building-Layouts-with-Stack-Views-1@2x.png)
 
 ---
 
 ### 规划布局层次结构
 
-构建复杂布局时，应将设计拆分成多个小的 stack 视图组合。以下示例展示了如何使用三种 stack 视图创建个人资料页：
+构建复杂布局时,应将设计拆分成多个小的 stack 视图组合。以下示例展示了如何使用三种 stack 视图创建个人资料页：
 
-![个人资料布局示意图](http://developer.apple.com/cn/documentation/swiftui/building-layouts-with-stack-views/Building%20Layouts%20with%20Stack%20Views%20_%20Apple%20Developer%20Documentation_files/Building-Layouts-with-Stack-Views-2@2x.png)
+![个人资料布局示意图](https://docs-assets.developer.apple.com/published/a5b7b41f3a40302214f2f18543eaaadf/6075/Building-Layouts-with-Stack-Views-2@2x.png)
 
-- `ZStack` 用作底层容器，包含个人头像 `Image`。
+- `ZStack` 用作底层容器,包含个人头像 `Image`。
 - 头像上方叠加一个半透明的 `HStack`。
 - `HStack` 内部包含一个左对齐的 `VStack`，显示两行文本。
 - `Spacer` 用于将文本推向左侧边缘。
@@ -69,14 +69,14 @@ struct ProfileView: View {
 
 ### 利用 Alignment 和 Spacer 定位视图
 
-- `alignment` 属性控制 stack 内部子视图的对齐方式。`VStack` 使用水平对齐 (`leading`、`center`、`trailing`)，`HStack` 使用垂直对齐。
-- `Spacer` 视图会在主轴方向上扩展，填充剩余空间，从而推动其他视图靠边排列。
+- `alignment` 属性控制 stack 内部子视图的对齐方式。`VStack` 使用水平对齐 (`leading`、`center`、`trailing`),`HStack` 使用垂直对齐。
+- `Spacer` 视图会在主轴方向上扩展,填充剩余空间,从而推动其他视图靠边排列。
 
-![对齐示意图](http://developer.apple.com/cn/documentation/swiftui/building-layouts-with-stack-views/Building%20Layouts%20with%20Stack%20Views%20_%20Apple%20Developer%20Documentation_files/Building-Layouts-with-Stack-Views-3@2x.png)
+![对齐示意图](https://docs-assets.developer.apple.com/published/d3ad16aec1948970076cc098e438be1f/6075/Building-Layouts-with-Stack-Views-3@2x.png)
 
-![Spacer 使用示意图](http://developer.apple.com/cn/documentation/swiftui/building-layouts-with-stack-views/Building%20Layouts%20with%20Stack%20Views%20_%20Apple%20Developer%20Documentation_files/Building-Layouts-with-Stack-Views-4@2x.png)
+![Spacer 使用示意图](https://docs-assets.developer.apple.com/published/189fa436f07ed0011bd0c1abeb167723/6075/Building-Layouts-with-Stack-Views-4@2x.png)
 
-- `Divider` 用于在子视图间插入一条线，但不会扩展填充空间。
+- `Divider` 用于在子视图间插入一条线,但不会扩展填充空间。
 
 ---
 
