--- a/content/posts/2025/11.14-002.md
+++ b/content/posts/2025/11.14-002.md
@@ -233,12 +233,25 @@ theme = 'ananke'  # <-- 切换主题，主题名必须与文件夹名一致
 hugo server -D --theme ananke
 ```
 
-### 更新主题
+### 更新主题并提交
 
-要更新您已安装的主题，请在您的项目根目录下运行以下命令：
+要更新您已安装的主题（以主题LoveIt为例），在项目根目录下运行以下命令：
 
 ```bash
 git submodule update --remote themes/LoveIt
+```
+
+回到根目录，提交更新：
+
+```bash
+git add themes/LoveIt
+```
+
+提交更改信息
+
+```bash
+git commit -m "更新主题子模块到最新版本"
+git push
 ```
 
 ## 求助与资源
