--- a/content/posts/2025/11.16-001.md
+++ b/content/posts/2025/11.16-001.md
@@ -7,8 +7,8 @@ image: images/github-cover-001.jpg
 categories:
   - tutorial
 tags:
-  - swift
-  - code
+  - git
+  - github
 draft: false
 ---
 # Git与GitHub入门指南
