增加了feature帖子

--- a/content/posts/2025/11.14-002.md
+++ b/content/posts/2025/11.14-002.md
@@ -1,5 +1,5 @@
 ---
-title: "Hugo静态网站快速入门指南"
+title: "Hugo静态网站快速入门"
 date: 2025-11-14T22:11:36+07:00
 slug: /hugo-quick-start-guide/
 description: 本文详细介绍了如何快速搭建一个 Hugo 网站，包括环境准备、创建站点、添加内容、配置网站和发布站点的完整流程。适合有一定命令行基础的用户快速上手 Hugo 静态网站生成器。
@@ -9,6 +9,7 @@ categories:
 tags:
   - hugo
   - blog
+  - feature
 draft: false
 ---
 
